kubernetes/home/media-server/overseerr/import-data.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: samba-server
spec:
  replicas: 1
  selector:
    matchLabels:
      app: samba-server
  template:
    metadata:
      labels:
        app: samba-server
    spec:
      containers:
      - name: samba
        image: dperson/samba
        ports:
        - containerPort: 139
        - containerPort: 445
        securityContext:
          capabilities:
            add: ["SYS_ADMIN"]
            drop: ["ALL"]
        command: ["samba.sh"]
        args: ["-u", "exampleUser;examplePass", "-s", "public;/share;yes;no;yes;all;none", "-p"]
        volumeMounts:
        - mountPath: /share
          name: samba-share
      volumes:
      - name: samba-share
        persistentVolumeClaim:
          claimName: overseerr-longhorn-pvc # change to data target pvc
