kubernetes/home/media-server/overseerr/smb-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: samba-server-service
  namespace: media-server
spec:
  type: NodePort
  ports:
    - name: smb
      port: 445
      targetPort: 445
      nodePort: 31445
    - name: netbios-ssn
      port: 139
      targetPort: 139
      nodePort: 31390 # Optional: Only if you need NetBIOS Session Service
  selector:
    app: samba-server
