kubernetes/home/media-server/overseerr/ingress.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: overseerr
  namespace: media-server
  annotations: 
    kubernetes.io/ingress.class: traefik-external
    # traefik.ingress.kubernetes.io/router.middlewares: traefik-dev-ip-list@kubernetescrd
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`request.dev.opryga.com`)
      kind: Rule
      services:
        - name: overseerr
          port: 5055
      middlewares:
        # - name: dev-ip-list 
        - name: default-headers
        # - name: oauth-forward-auth
        # - name: oauth-unauthorized
        # - name: sso-auth-error
        
  tls:
    secretName: dev-opryga-com-tls
